--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     height: 80px;
     color: white;
     height: 80px;
-    background-color: rgb(110, 110, 189) ;
+    background-color: rgba(103, 118, 202, 0.719) ;
 }
 
 .navbar .logo{
