--- a/src/Components/Overview/Overview.css
+++ b/src/Components/Overview/Overview.css
@@ -4,6 +4,12 @@
     padding: 60px 0;
 }
 
+.overview .title{
+    color: white;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
 .overview .flex{
     justify-content: space-between;
 }
