--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,11 +1,11 @@
 .login{
     align-items: center;
     width: 400px;
-    margin: 20px auto;
+    margin: 50px auto;
     border: 1px solid #262626;
     border-radius: 10px;
-    padding: 0 20px;
-    padding-bottom: 10px;
+    padding: 30px;
+    background-color: #eee;
 }
 
 .login .btn-signIn{
