add service option added

--- a/src/Components/PackageDetails/PackageDetails.css
+++ b/src/Components/PackageDetails/PackageDetails.css
@@ -41,7 +41,7 @@
 }
 
 /* ----------FORM-------------------- */
-.form{
+.package-details .form{
     background-color: #fff;
     padding: 10px;
     border-radius: 10px;
