--- a/src/Components/Packages/Packages.css
+++ b/src/Components/Packages/Packages.css
@@ -13,3 +13,12 @@
 .packages .grid{
     grid-template-columns: repeat(3, 1fr);
 }
+
+.packages .btn-addTour{
+    width: 100%;
+    margin: 30px 0;
+    padding: 20px 0;
+    font-size: 30px;
+    background-color: tomato;
+    color: white;
+}
