--- a/src/Components/AddPackage/AddPackage.css
+++ b/src/Components/AddPackage/AddPackage.css
@@ -36,3 +36,35 @@
 .add-package .form input[type='submit']:hover{
     background-color: tomato;
 }
+
+/* Mobile */
+@media (max-width: 500px){
+    .add-package h1{
+        font-size: 30px;
+    }
+    .add-package p{
+        font-size: 20px;
+    }
+    .add-package .form{
+        background-color: #eee;
+        padding: 30px;
+        border-radius: 10px;
+        width: 80%;
+        margin: 20px auto;
+    }
+    .add-package .form input, .add-package .form textarea{
+        width: 100%;
+        height: 40px;
+        margin: 12px auto;
+        padding: 15px 16px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+    .add-package .form input[type='submit']{
+        background-color: #304f47;
+        color: white;
+        border-radius: 30px;
+        height: 50px;
+    }
+}
