--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -44,3 +44,24 @@
     background-color: tomato;
     color: white;
 }
+
+/* ------------------Mobile---------------  */
+@media(max-width: 500px){
+    .navbar{
+        height: 140px;
+    }
+    .navbar .flex{
+        flex-direction: column;
+    }
+    .navbar ul{
+        padding-bottom: 20px; 
+    }
+    .navbar a, .navbar li{
+        font-size: 14px;
+        padding: 0;
+    }
+    .navbar button{
+        font-size: 14px;
+        padding: 2px;
+    }
+}
